refactor PomodoroService.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,8 +177,13 @@
     <!-- Pomodoro Fragment -->
     <string name="pomodoro_fragment_toolbar_title">Pomodoro</string>
     <string name="pomodoro_fragment_textView_select_time_label">Selecione o tempo de estudo</string>
-    <string name="pomodoro_fragment_textView_select_interval_label">Selecione o tempo de intervalo</string>
-    <string name="pomodoro_fragment_textView_select_extra_interval_label">Selecione o tempo do intervalo extra</string>
+    <string name="pomodoro_fragment_textView_select_interval_label">Selecione o tempo de pausa</string>
+    <string name="pomodoro_fragment_textView_select_extra_interval_label">Selecione o tempo de pausa longa</string>
+    <string name="pomodoro_fragment_label_select_cycles_button_concatenated_text">Pomodoros até uma pausa longa:</string>
+
+    <!-- Select Pomodoro Cycles Bottom Sheet Dialog -->
+    <string name="select_pomodoro_cycles_bottom_sheet_dialog_textView_title">Selecione a quantidade de Pomodoros até o intervalo</string>
+
 
     <!-- Profile Fragment -->
     <string name="profile_fragment_toolbar_title">Perfil</string>
