--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,6 +176,9 @@
 
     <!-- Pomodoro Fragment -->
     <string name="pomodoro_fragment_toolbar_title">Pomodoro</string>
+    <string name="pomodoro_fragment_textView_pomodoro_timer">Timer: </string>
+    <string name="pomodoro_fragment_textView_interval_timer">Pausa: </string>
+    <string name="pomodoro_fragment_textView_extra_interval_timer">Pausa longa: </string>
     <string name="pomodoro_fragment_textView_select_time_label">Selecione o tempo de estudo</string>
     <string name="pomodoro_fragment_textView_select_interval_label">Selecione o tempo de pausa</string>
     <string name="pomodoro_fragment_textView_select_extra_interval_label">Selecione o tempo de pausa longa</string>
@@ -183,7 +186,6 @@
 
     <!-- Select Pomodoro Cycles Bottom Sheet Dialog -->
     <string name="select_pomodoro_cycles_bottom_sheet_dialog_textView_title">Selecione a quantidade de Pomodoros até o intervalo</string>
-
 
     <!-- Profile Fragment -->
     <string name="profile_fragment_toolbar_title">Perfil</string>
