--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
     <!-- Main Activity -->
     <string name="main_activity_toast_message_notifications_permission_not_granted">O app não mostrará notificações</string>
     <string name="main_activity_toast_message_notifications_permission_granted">O app mostrará notificações</string>
-    <string name="main_activity_toast_message_successful_update_user_photo">Foto alterada</string>
+    <string name="main_activity_toast_message_successful_update_user_photo">Foto alterada com sucesso</string>
     <string name="main_activity_toast_message_error_update_user_photo">Erro ao alterar foto</string>
     <string name="main_activity_toast_message_successful_remove_user_photo">Sucesso ao remover foto</string>
     <string name="main_activity_toast_message_error_remove_user_photo">Erro ao remover foto</string>
