--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -271,6 +271,10 @@
     <string name="discipline_reminder_worker_notification_title">Hora de estudar</string>
     <string name="discipline_reminder_worker_notification_description">Você tem disciplinas agendadas para estudar agora! Aproveite o seu dia e mergulhe no conhecimento!</string>
 
+    <string name="api_rating_worker_notification_title"> Sugestão enviada.</string>
+    <string name="api_rating_worker_notification_description"> Obrigado por contribuir!</string>
+
+
     <!-- Discipline Form Confirm Dialog  -->
     <string name="discipline_form_confirm_dialog_title">Confirmar disciplina</string>
     <string name="discipline_form_confirm_dialog_message">Confirmar adição de uma nova disciplina?</string>
